[package]
name = "una"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "core","bindings/una-python","schemas"]

[[bin]]
name = "una-cli"
path = "src/cli.rs"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "1.0" }
clap = { version = "3.0", features = [ "derive", "env" ] }
tokio = { version = "1", features = ["full"] }
una-core = { path = "core" }
